# PointCloudVisualizer

./: Cargo.toml  README.md  arguments.yml  build.rs
ClusterDetectionExe/: CMakeLists.txt  main.cpp
ClusterDetectionExe/ReleaseBuildLinux/: ClusterDetectionExe
docs/: Point Cloud Visualizer User Guide.docx
sample_point_clouds/: initialData.txt
shaders/: sceneFragmentShader.glsl  sceneVertexShader.glsl  textFragmentShader.glsl  textVertexShader.glsl
src/: args_parser.rs  main.rs  view_port_constants.rs  window.rs
src/geometry/: geometry_trait.rs  grid.rs  mod.rs  model.rs
src/gl_wrappers/: buffer.rs  fbo.rs  mod.rs  shader_program_creation.rs  vao.rs
src/helper_logic/: folder_location_functions.rs  initialization_functions.rs  main_loop_functions.rs  mod.rs  point_cloud_analyzer.rs
src/ipc_logic/: ipc_content_logic.rs  ipc_receiver.rs  mod.rs
src/rendering/: camera.rs  cluster_colour.rs  draw_functions.rs  mod.rs  scene_renderer.rs  sunlight.rs  text_rendering.rs  view_fbo.rs
src/view_logic/: mod.rs  view_selection.rs  view_transform.rs
text_rendering/: robotoFont.fnt
